# FracNL

./: LICENSE  README.md  React App.html  package-lock.json
contracts/erc721/: Cargo.toml  lib.rs
contracts/fractionalizer/: Cargo.toml  lib.rs
contracts/nft_lending/: Cargo.toml  lib.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  commons.js  index.css  index.js
frontend/src/assets/: nft.avif
frontend/src/component/: Alert.jsx  Banner.jsx  CardComponent.jsx  CarouselComponent.jsx  CarouselItem.jsx  ChooseAccount.jsx  Footer.jsx  Fractionalise.jsx  HomePage.jsx  ImagePreview.jsx  ListNFT.jsx  ListingDetail.jsx  Logo.jsx  MintNFT.jsx  Navbar.jsx  Profile.jsx  SnackbarCloseButton.jsx  chooseAccount.jsx
frontend/src/component/ListingDetails/: CreateOffer.jsx  ListingDetail.jsx  Offers.jsx  Repay.jsx  StatusAndTimer.jsx
frontend/src/component/Mint/: ImagePreview.jsx  MintNFT.jsx
