[package]
name = "nft_lending"
version = "0.1.0"
authors = ["Nimish Agrawal realnimish@gmail.com"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-rc", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[profile.release]
overflow-checks = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
